--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#portfolio">Projects <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#projectsLines">Projects <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
+                <a class="nav-link" href="#contactLines">Contact</a>
               </li>
               <li class="nav-item">
                 <!-- beg -->
@@ -38,10 +38,10 @@
                 <!-- end -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#aboutLines">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#philosophy">Philosophy</a>
+                <a class="nav-link" href="#philosphyLines">Philosophy</a>
               </li>
             </ul>
           </div>
@@ -276,7 +276,7 @@
 
       </div>
 
-      <div class="lineContainer">
+      <div class="lineContainer" id="projectsLines">
         <div class="leftLine"></div>
         <div class="symbol" id="gearBox">
           <div class="gear" id="gear1">
