updated for mobile.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div id="about">
-        <h1>I am Jonny Schult and. . . 
+        <h1>I am Jonny Schult and <span>. . .</span> 
         </h1>
         <div id="aboutContent">
           <div id="picsContainer">
@@ -308,7 +308,7 @@
             </a>
             <a class="projectLink" href="https://jonnyschult.github.io/staticLayout/" target="blank">
               <img src="./assets/staticLayout.jpg" alt="">
-              <div class="overlay"><h1>Static staticLayout</h1>This project aimed to test and expand styling skills with CSS and HTML. There is not JavaScript or DOM manipulation on this page.</div>
+              <div class="overlay"><h1>Static Layout</h1>This project aimed to test and expand styling skills with CSS and HTML. There is not JavaScript or DOM manipulation on this page.</div>
             </a>
             <a class="projectLink" href="https://jonnyschult.github.io/ghibliAPI/" target="blank">
               <img src="./assets/studioGhibliAPI.jpg" alt="">
