--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p>I am pragmatist, from the practical to the theoretical level. I come to the tech market from the philosophy world, where I studied American Pragmatism and the philosophy of science. This background shapes the principles which guide my work and allow me to conceptualize, analyze and realize objectives, be they fundamentally creative or technical. 
             <p> Responsiveness and collaboration are lessons well learned from the history and philosophy of science. Any pursuit, be it economic, technological, or economic must be responsive to the goals and constraints of the project as well as worked on in a spirit of openness and communication. As a professional, I strive to realize these ideals.
             </p> 
-            <p> Recently I joined <a href=”https://elevenfifty.org/”> Eleven Fifty Academy </a> to learn the syntax and structure of the web. Through this I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
+            <p> Recently I joined <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a> to learn the syntax and structure of the web. Through this I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
             </p>
           </div>
         </div>      
