FIXED: Resume, bottom logo, horizontal mobile view

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             </p> 
             <p> Recently I joined <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a> to learn the syntax and structure of the web. Through this I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
             </p>
+            <p id="resume"> Download my resume <a href="./assets/RESUME.pdf" target="blank">HERE</a>.</p>
           </div>
         </div>      
       </div>
@@ -173,7 +174,7 @@
                 </div>
               </div>
             </div>
-            <div class="categoryContent"> <p>What makes a good user experience? What the user expects often determines how the user feels about a website. As such, user experience is a dynamic process of expectation and experience. My goal in developing websites is to meet and exceed user expectation by creating a website in-line with its purpose and meticulously and empirically monitored.</p> </div>
+            <div class="categoryContent"> <p>What makes a good user experience? What the user expects often determines how the user feels about a website. As such, user experience is a dynamic process of expectation and interaction. Interactive cues can range from tacit, for example in a studio artist profile page, to explicit, in an e-commerce page. Whether they are tacit or explicit, they should always be apparent. My goal in developing websites is to meet and exceed user expectation by creating a website in-line with its purpose and aesthetic theme.</p> </div>
           </div>
           <div class="category">
             <div class="orbit" id="orbitTwo">
@@ -362,7 +363,64 @@
       </div>
       </div>
       <div id="farewell">
-        <img src="./assets/logoAnimate.png" alt="">
+        <div class="turing">
+          <div class="headT">
+            <div class="eyeLeft">
+              <div id="leftPupil"></div>
+            </div>
+            <div class="mouth"></div>
+            <div class="eyeRight">
+              <div id="rightPupil"></div>
+            </div>
+          </div>
+            <div class="cpu">
+              <div class="gearT" id="gearT1">
+                <div class="baseT baseTOdd">
+                  <div class="toothT toothT1" id="toothOneT1"></div>
+                  <div class="toothT toothT2" id="toothTwoT1"></div>
+                  <div class="toothT toothT3" id="toothThreeT1"></div>
+                  <div class="toothT toothT4" id="toothFourT1"></div>
+                  <div class="holeT"></div>
+                </div>
+              </div>
+              <div class="gearT" id="gearT2">
+                <div class="baseT baseTEven">
+                  <div class="toothT toothT1" id="toothOneT2"></div>
+                  <div class="toothT toothT2" id="toothTwoT2"></div>
+                  <div class="toothT toothT3" id="toothThreeT2"></div>
+                  <div class="toothT toothT4" id="toothFourT2"></div>
+                  <div class="holeT"></div>
+                </div>
+              </div>
+              <div class="gearT" id="gearT3">
+                <div class="baseT baseTOdd">
+                  <div class="toothT toothT1" id="toothOneT3"></div>
+                  <div class="toothT toothT2" id="toothTwoT3"></div>
+                  <div class="toothT toothT3" id="toothThreeT3"></div>
+                  <div class="toothT toothT4" id="toothFourT3"></div>
+                  <div class="holeT"></div>
+                </div>
+              </div>
+              <div class="gearT" id="gearT4">
+                <div class="baseT baseTEven">
+                  <div class="toothT toothT1" id="toothOneT4"></div>
+                  <div class="toothT toothT2" id="toothTwoT4"></div>
+                  <div class="toothT toothT3" id="toothThreeT4"></div>
+                  <div class="toothT toothT4" id="toothFourT4"></div>
+                  <div class="holeT"></div>
+                </div>
+              </div>
+              <div class="gearT" id="gearT5">
+                <div class="baseT baseTOdd">                    
+                  <div class="toothT toothT1" id="toothOneT5"></div>
+                  <div class="toothT toothT2" id="toothTwoT5"></div>
+                  <div class="toothT toothT3" id="toothThreeT5"></div>
+                  <div class="toothT toothT4" id="toothFourT5"></div>
+                  <div class="holeT"></div>
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
     </main>
     <footer> <a href="https://github.com/jonnyschult">GitHub</a><a href="https://www.linkedin.com/in/jonathan-schult-827156195/">LinkedIn</a> <span> © 2017 Copyright: Jonny Schult</span></footer>
