Contact form improved. Bit of stylistic formating.

--- a/index.html
+++ b/index.html
@@ -344,89 +344,89 @@
 
       <div id="contact">
 
-        <!-- <img src="./assets/LI-In-Bug.png" alt="">
+        <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/mdopawwv" method="post">
+          <fieldset id="fs-frm-inputs">
+            <!-- <label for="full-name">Full Name</label> -->
+            <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+            <!-- <label for="email-address">Email Address</label> -->
+            <input type="email" name="_replyto" id="email-address" placeholder="your-email@here.com" required="">
+            <!-- <label for="message">Message</label> -->
+            <textarea rows="5" name="message" id="message" placeholder="Message" required=""></textarea>
+            <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+          </fieldset>
+          <input id="submit" type="submit" value="Submit">
+        </form>
 
-        <img src="./assets/GitHub-Mark-120px-plus.png" alt=""> -->
-
-        <form id="my-form"
-        action="https://formspree.io/f/mdopawwv"
-        method="POST">
-          <input id="senderEmail" type="email" name="email" placeholder="your-email@here.com"/>
-          <input id="message" type="text" name="message" placeholder="Message"/>
-          <button id="my-form-button">Send</button>
-          <p id="my-form-status"></p>
-      </form>
-
-      <div id="links">
-        <!-- <a href="https://github.com/jonnyschult"><img src="./assets/GitHub-Mark-120px-plus.png" alt=""></a>
-        <a href="https://www.linkedin.com/in/jonathan-schult-827156195/"><img src="./assets/LI-In-Bug.png" alt=""></a> -->
-      </div>
-      </div>
-      <div id="farewell">
-        <div class="turing">
-          <div class="headT">
-            <div class="eyeLeft">
-              <div id="leftPupil"></div>
-            </div>
-            <div class="mouth"></div>
-            <div class="eyeRight">
-              <div id="rightPupil"></div>
-            </div>
-          </div>
-            <div class="cpu">
-              <div class="gearT" id="gearT1">
-                <div class="baseT baseTOdd">
-                  <div class="toothT toothT1" id="toothOneT1"></div>
-                  <div class="toothT toothT2" id="toothTwoT1"></div>
-                  <div class="toothT toothT3" id="toothThreeT1"></div>
-                  <div class="toothT toothT4" id="toothFourT1"></div>
-                  <div class="holeT"></div>
-                </div>
-              </div>
-              <div class="gearT" id="gearT2">
-                <div class="baseT baseTEven">
-                  <div class="toothT toothT1" id="toothOneT2"></div>
-                  <div class="toothT toothT2" id="toothTwoT2"></div>
-                  <div class="toothT toothT3" id="toothThreeT2"></div>
-                  <div class="toothT toothT4" id="toothFourT2"></div>
-                  <div class="holeT"></div>
-                </div>
-              </div>
-              <div class="gearT" id="gearT3">
-                <div class="baseT baseTOdd">
-                  <div class="toothT toothT1" id="toothOneT3"></div>
-                  <div class="toothT toothT2" id="toothTwoT3"></div>
-                  <div class="toothT toothT3" id="toothThreeT3"></div>
-                  <div class="toothT toothT4" id="toothFourT3"></div>
-                  <div class="holeT"></div>
-                </div>
-              </div>
-              <div class="gearT" id="gearT4">
-                <div class="baseT baseTEven">
-                  <div class="toothT toothT1" id="toothOneT4"></div>
-                  <div class="toothT toothT2" id="toothTwoT4"></div>
-                  <div class="toothT toothT3" id="toothThreeT4"></div>
-                  <div class="toothT toothT4" id="toothFourT4"></div>
-                  <div class="holeT"></div>
-                </div>
-              </div>
-              <div class="gearT" id="gearT5">
-                <div class="baseT baseTOdd">                    
-                  <div class="toothT toothT1" id="toothOneT5"></div>
-                  <div class="toothT toothT2" id="toothTwoT5"></div>
-                  <div class="toothT toothT3" id="toothThreeT5"></div>
-                  <div class="toothT toothT4" id="toothFourT5"></div>
-                  <div class="holeT"></div>
-                </div>
-              </div>
-            </div>
+        <div id="turingBot">
+        <div class="headT">
+        <div class="eyeLeft">
+        <div id="leftPupil"></div>
         </div>
+        <div class="mouth"></div>
+        <div class="eyeRight">
+        <div id="rightPupil"></div>
+        </div>
+        </div>
+        <div class="cpu">
+        <div class="gearT" id="gearT1">
+          <div class="baseT baseTOdd">
+            <div class="toothT toothT1" id="toothOneT1"></div>
+            <div class="toothT toothT2" id="toothTwoT1"></div>
+            <div class="toothT toothT3" id="toothThreeT1"></div>
+            <div class="toothT toothT4" id="toothFourT1"></div>
+            <div class="holeT"></div>
+          </div>
+        </div>
+        <div class="gearT" id="gearT2">
+          <div class="baseT baseTEven">
+            <div class="toothT toothT1" id="toothOneT2"></div>
+            <div class="toothT toothT2" id="toothTwoT2"></div>
+            <div class="toothT toothT3" id="toothThreeT2"></div>
+            <div class="toothT toothT4" id="toothFourT2"></div>
+            <div class="holeT"></div>
+          </div>
+        </div>
+        <div class="gearT" id="gearT3">
+          <div class="baseT baseTOdd">
+            <div class="toothT toothT1" id="toothOneT3"></div>
+            <div class="toothT toothT2" id="toothTwoT3"></div>
+            <div class="toothT toothT3" id="toothThreeT3"></div>
+            <div class="toothT toothT4" id="toothFourT3"></div>
+            <div class="holeT"></div>
+          </div>
+        </div>
+        <div class="gearT" id="gearT4">
+          <div class="baseT baseTEven">
+            <div class="toothT toothT1" id="toothOneT4"></div>
+            <div class="toothT toothT2" id="toothTwoT4"></div>
+            <div class="toothT toothT3" id="toothThreeT4"></div>
+            <div class="toothT toothT4" id="toothFourT4"></div>
+            <div class="holeT"></div>
+          </div>
+        </div>
+        <div class="gearT" id="gearT5">
+          <div class="baseT baseTOdd">                    
+            <div class="toothT toothT1" id="toothOneT5"></div>
+            <div class="toothT toothT2" id="toothTwoT5"></div>
+            <div class="toothT toothT3" id="toothThreeT5"></div>
+            <div class="toothT toothT4" id="toothFourT5"></div>
+            <div class="holeT"></div>
+          </div>
+        </div>
+        </div>
+        </div>
+
+        <div id="links">
+
+        </div>
+
       </div>
     </main>
-    <footer> <a href="https://github.com/jonnyschult">GitHub</a><a href="https://www.linkedin.com/in/jonathan-schult-827156195/">LinkedIn</a> <span> © 2017 Copyright: Jonny Schult</span></footer>
+    <footer> <a href="https://github.com/jonnyschult"><i class="fa fa-github fa-fw"></i></a><a href="https://www.linkedin.com/in/jonathan-schult-827156195/">LinkedIn</a> <span> © 2020 Copyright: Jonny Schult</span></footer>
   </div>
 
     <script src="./script.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
