finished updating after graduation

--- a/index.html
+++ b/index.html
@@ -112,12 +112,10 @@
             </div>
           </div>
           <div id="mainText">
-            <p>I am pragmatist, from the practical to the theoretical level. I come to the tech market from the philosophy world, where I studied American Pragmatism and the philosophy of science. This background shapes the principles which guide my work and allow me to conceptualize, analyze and realize objectives, be they fundamentally creative or technical. 
-            <p> Responsiveness and collaboration are lessons well learned from the history and philosophy of science. Any pursuit, be it economic, technological, or economic must be responsive to the goals and constraints of the project as well as worked on in a spirit of openness and communication. As a professional, I strive to realize these ideals.
-            </p> 
-            <p> Recently I joined <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a> to learn the syntax and structure of the web. Through this I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
+            <p>I am pragmatist, from the practical to the theoretical level. I come to the tech market from the philosophy world, where I studied American Pragmatism and the philosophy of science. This education has shaped the principles which guide my work and allow me to conceptualize, analyze and realize objectives, be they fundamentally creative or technical. Moreover, a background in analytic philosophy has sharpened my skill in communication, particularly when elucidating technical details, like syntax or the logic of a function, and abstract ideas, like data flow and system design. 
+            <p> Recently graduated from <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a> where I learned the particulars of web development related technoligies and programming languages. Through this program, I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
             </p>
-            <p id="resume"> Download my resume <a href="./assets/RESUME.pdf" target="blank">HERE</a>.</p>
+            <p id="resume"> Download my resume <a href="./assets/JNBSResume.pdf" target="blank">HERE</a>.</p>
           </div>
         </div>      
       </div>
@@ -177,11 +175,11 @@
                 </div>
               </div>
             </div>
-            <div class="categoryContent"> <p>What makes a good user experience? What the user expects often determines how the user feels about a website. As such, user experience is a dynamic process of expectation and interaction. Interactive cues can range from tacit, for example in a studio artist profile page, to explicit, in an e-commerce page. Whether they are tacit or explicit, they should always be apparent. My goal in developing websites is to meet and exceed user expectation by creating a website in-line with its purpose and aesthetic theme.</p> </div>
+            <div class="categoryContent"> <p>What makes a good user experience? Expectation vs experience often determines how the user feels about a website. As such, user experience is a dynamic process of expectation and interaction. Interactive cues can range from tacit, for example in a studio artist profile page, to explicit, in an e-commerce page. Whether they are tacit or explicit, they should always be apparent. My goal in developing websites is to meet and exceed user expectation by creating a website in-line with its purpose and aesthetic theme.</p> </div>
           </div>
           <div class="category">
             <div class="orbit" id="orbitTwo">
-              <div class="bigBase" id="Code"><p>Code</p>
+              <div class="bigBase code" ><p>Code</p>
               
                 <div class="spoke2"></div>
                 <div class="spoke2"></div>
@@ -226,7 +224,7 @@
                 </div>
               </div>
             </div>
-            <div class="categoryContent"> <p>There are many different ways to achieve the same results on a webpage. But quality programming goes beyond merely getting results once. Good programming should be transparent, responsive to it's content, and deliver functionality effeciently. A lot of this comes down to the structure and logic of the code itself, but even the best laid paths benefit from a map. Rigorous documentation ensures that the code can be comprehended, used, and improved by whoever is maintaining it. As such, I am developing and improving upon documentation methods for my code. </p></div>
+            <div class="categoryContent"> <p>There are many different ways to achieve the same results on a webpage. But quality programming goes beyond merely getting results once. Code should be transparent in it's purpose and logical structure, consistent, and deliver functionality effeciently. This is contingent upon an engineer's ability develop a cogent system which can functionally guide project development while maintaining a flexible approach which is responsive to unforseen design challenges. I aim to implement these ideals in my design strategies and coding.</p></div>
           </div>
           <div class="category">
             <div class="orbit" id="orbitThree">
@@ -305,32 +303,33 @@
 
         <h1 id="portfolio">Projects</h1>
         <div id="projectItems">
-          <div id="oneToThree">
-            <a class="projectLink" href="https://jnbs-strava-runner-sheets.web.app/" target="blank">
-              <img src="./assets/runnerSheets.jpg" alt="">
-              <div class="overlay"><h1>Runner Sheets</h1> Runner Sheets is and app in pre-alpha phase which compiles running data by accessing APIs. When fully implemented, it aims to provide athletes a single source to access all of their running data and provide conceptualization tools for team and self coaching.</div>
+
+          <div class="projectOne">
+            <a class="mainProjectLink" href=https://runnersheetsclient.herokuapp.com/ target="blank">
+              <img src="./assets/pexels-mateusz-dach-332835.jpg" alt="">
+              <div class="overlay mainOverlay"><h1>RunnerSheets</h1> RunnerSheets (working title) is an app in development designed to be used by athletic teams and running clubs. Essentially, it is a way for coaches and athletes, or club members to share activity information. This enables clubs to have peer to peer coaching and team coaches to track athlete fitness, particularly during the off season, and share feedback. Data sharing and communication form the bedrock of this apps development framework. This project relies on React, Node.js, PostgreSQL, Express.js, Sequelize, Bcrypt, JWT and Heroku.</div>
             </a>
-            <a class="projectLink" href="https://jonnyschult.github.io/staticLayout/" target="blank">
-              <img src="./assets/staticLayout.jpg" alt="">
-              <div class="overlay"><h1>Static Layout</h1>This project aimed to test and expand styling skills with CSS and HTML. There is not JavaScript or DOM manipulation on this page.</div>
+          </div>
+
+          <div id="twoToThree">
+            <a class="projectLink" href="https://jjr-biblioquest.herokuapp.com/" target="blank">
+              <img src="./assets/pexels-ksenia-chernaya-3952078.jpg" alt="">
+              <div class="overlay"><h1>BiblioQuest</h1>Biblioquest is the product of a group project in a web development intensive course. My primary responsibilities were to design the back end for data persistence using Node.js, Express.js, Sequelize, Bcrypt, JWT and PostgreSQL, and migrating the data in the client from Google API to the server. </div>
             </a>
             <a class="projectLink" href="https://jonnyschult.github.io/ghibliAPI/" target="blank">
               <img src="./assets/studioGhibliAPI.jpg" alt="">
-              <div class="overlay"><h1>Studio Ghibli API</h1> Studio Ghibli is a premiere anime film studio based in Japan. It has grossed more than a billion dollars. This site invites you to experience the art of Ghibli why reading synopses of their films ranked best to worst by Rotten Tomatoes scoring accessed using an API.</div>
+              <div class="overlay"><h1>Studio Ghibli API</h1> This project draws data from the Studio Ghibli API and presents with an HTML, CSS and JavaScript based website. The page relies on the DOM for dynamic website content.</div>
             </a>
           </div>
-          <div id="fourToSix">
-            <a class="projectLink" href="https://gardenerspath.com/plants/flowers/early-spring-flowers/" target="blank">
-              <img src="./assets/blueBadge.jpg" alt="">
-              <div class="overlay"><h1>TBD</h1>In the meantime, here is a picture of my wife giving me a flower on an early spring day. </div>
-            </a>
+
+          <div id="fourToFive">
             <a class="projectLink" href="https://jonnyschult.github.io/CreatureCSS/" target="blank">
               <img src="./assets/creatureCSS.jpg" alt="">
-              <div class="overlay"><h1>CSS Creature</h1> CSS created creatures tied to the theme of human intellectual evolution. Click on the links to read about some of the key players in the history of logic.</div>
+              <div class="overlay"><h1>CSS Creature</h1> CSS created creatures illustrate the theme of human intellectual evolution. Click on the links to read about some of the key players in the history of logic.</div>
             </a>
-            <a class="projectLink" href="https://newagebakingcompany.com/" target="blank">
-              <img src="./assets/redBadge.jpg" alt="">
-              <div class="overlay"><h1>TBD</h1>In the meantime, here is a fruity pepples donut from a local bakery.</div>
+            <a class="projectLink" href="https://jonnyschult.github.io/staticLayout/" target="blank">
+              <img src="./assets/staticLayout.jpg" alt="">
+              <div class="overlay"><h1>Static Layout</h1>This project aimed to test and expand styling skills with CSS and HTML. There is no JavaScript or DOM manipulation on this page.</div>
             </a>
           </div>
         </div>
