fixed mainProject sizing issue for mobile. Updated splash page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>I am pragmatist, from the practical to the theoretical level. I come to the tech market from the philosophy world, where I studied American Pragmatism and the philosophy of science. This education has shaped the principles which guide my work and allow me to conceptualize, analyze and realize objectives, be they fundamentally creative or technical. Moreover, a background in analytic philosophy has sharpened my skill in communication, particularly when elucidating technical details, like syntax or the logic of a function, and abstract ideas, like data flow and system design. 
             <p> Recently graduated from <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a> where I learned the particulars of web development related technoligies and programming languages. Through this program, I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
             </p>
-            <p id="resume"> Download my resume <a href="./assets/JNBSResume.pdf" target="blank">HERE</a>.</p>
+            <p id="resume"> Download my resume <a href="./assets/ResumeJNBS.pdf" target="blank">HERE</a>.</p>
           </div>
         </div>      
       </div>
@@ -272,7 +272,7 @@
                 </div>
               </div>
             </div>
-            <div class="categoryContent"><p>Business environments can be stressful. Often times this stress is compounded by poor working relationships. It is my philosophy that human productivity, and life in general, is best fostered in an enthusiastic, collaborative and open environment. When these things are done well, meaning and quality of life comes along with productivity. As professional, I conduct my work in a way which brings meaning and productivity to myself and my colleagues. </p></div>
+            <div class="categoryContent"><p>Business environments can be stressful. Often times this stress is compounded by poor working relationships. It is my philosophy that human productivity, and life in general, is best fostered in an enthusiastic, collaborative and open environment. When these things are done well, meaning and quality of life comes along with productivity. As a professional, I conduct my work in a way which brings meaning and productivity to myself and my colleagues. </p></div>
           </div>
         </div>
 
@@ -428,7 +428,7 @@
     </main>
     <footer><span> © 2020 Copyright: Jonny Schult</span></footer>
   </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./script.js"></script>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
