--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <p>I am pragmatist, from the practical to the theoretical level. I come to the tech market from the philosophy world, where I studied American Pragmatism and the philosophy of science. This education has shaped the principles which guide my work and allow me to conceptualize, analyze and realize objectives, be they fundamentally creative or technical. Moreover, a background in analytic philosophy has sharpened my skill in communication, particularly when elucidating technical details, like syntax or the logic of a function, and abstract ideas, like data flow and system design. 
             <p> Recently graduated from <a href="https://elevenfifty.org/"> Eleven Fifty Academy </a> where I learned the particulars of web development related technoligies and programming languages. Through this program, I gained a  comprehension of web tools and applications which I now use to help myself and others realize their business and artistic endeavors. 
             </p>
-            <p id="resume"> Download my resume <a href="./assets/ResumeJNBS.pdf" target="blank">HERE</a>.</p>
+            <p id="resume"> Download my resume <a href="./assets/ResumeSchult.pdf" target="blank">HERE</a>.</p>
           </div>
         </div>      
       </div>
