added skills sections

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
             <p id="resume"> Download my resume <a href="./assets/ResumeSchult.pdf" target="blank">HERE</a>.</p>
           </div>
-        </div>      
+        </div>
       </div>
 
       <div class="lineContainer" id="philosphyLines">
@@ -333,7 +333,43 @@
             </a>
           </div>
         </div>
-
+        <div class="skills">
+          <h2>Technologies Used</h2>
+          <div class="badgeContainer">
+            <div class="badgeDiv">
+              <img src="./assets/HTML5_logo_and_wordmark.svg" alt="" class="skillBadge">
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/CSS3_logo_and_wordmark.svg" alt="" class="skillBadge">
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/React-icon.svg" alt="" class="skillBadge">
+              <p class="badgeTitle">React</p>
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/Bootstrap_logo.svg" alt="" class="skillBadge">
+              <p class="badgeTitle">Bootstrap</p>
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/JQuery_logo-512.webp" alt="" class="skillBadge">
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/javascript.svg" alt="" class="skillBadge">
+              <p class="badgeTitle">JavaScript</p>
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/Node.js_logo.svg" alt="" class="skillBadge">
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/sequelize-seeklogo.com.svg" alt="" class="skillBadge">
+              <p class="badgeTitle">Sequelize</p>
+            </div>
+            <div class="badgeDiv">
+              <img src="./assets/Postgres.png" alt="" class="skillBadge">
+              <p class="badgeTitle">PostgreSQL</p>
+            </div>
+          </div>
+        </div> 
       </div>
 
       <div class="lineContainer" id="contactLines">
