Added demo link to main project

--- a/index.html
+++ b/index.html
@@ -305,10 +305,14 @@
         <div id="projectItems">
 
           <div class="projectOne">
-            <a class="mainProjectLink" href=https://runnersheetsclient.herokuapp.com/ target="blank">
+            <div class="mainProject" >
               <img src="./assets/pexels-mateusz-dach-332835.jpg" alt="">
-              <div class="overlay mainOverlay"><h1>RunnerSheets</h1> RunnerSheets (working title) is an app in development designed to be used by athletic teams and running clubs. Essentially, it is a way for coaches and athletes, or club members to share activity information. This enables clubs to have peer to peer coaching and team coaches to track athlete fitness, particularly during the off season, and share feedback. Data sharing and communication form the bedrock of this apps development framework. This project relies on React, Node.js, PostgreSQL, Express.js, Sequelize, Bcrypt, JWT and Heroku.</div>
-            </a>
+              <div class="overlay mainOverlay"> 
+                <a href=https://runnersheetsclient.herokuapp.com/ target="blank" class="mainProjectLinks appLink"><h1>RunnerSheets</h1></a> 
+                  <a href=https://runnersheetsclient.herokuapp.com/ target="blank"  class="mainProjectLinks appLink"> RunnerSheets (working title) is an app in development designed to be used by athletic teams and running clubs. Essentially, it is a way for coaches and athletes, or club members to share activity information. This enables clubs to have peer to peer coaching and team coaches to track athlete fitness, particularly during the off season, and share feedback. Data sharing and communication form the bedrock of this apps development framework. This project relies on React, Node.js, PostgreSQL, Express.js, Sequelize, Bcrypt, JWT and Heroku.</a> 
+                  <a href="https://youtu.be/St5lrN0dgUg" target="blank" class="mainProjectLinks demoLink">Demo</a>
+                </div>
+            </div>
           </div>
 
           <div id="twoToThree">
